# dreamfi-v1

./: .gitignore
contracts/: IERC20.vyi  IPool.vyi  InterestRateConfig.vy  Pool.vy.backup  aggregator.vy  currency.vy  erc20.vy  factory.vy  factory_abi.json  interesRate2.vy  interestRate.vy  interestRate.vy.backup  main.py  oracle.vy  pool.vy  rayMath.vy  test.py
contracts/libs/auth/: ownable.vy
contracts/libs/utils/: eip712_domain_separator.vy
contracts/~/.config/nvim-data/undodir/: %Users%protocolwhisper%Documents%Working Dir%Denver2025%contracts%interesRate.vy  %Users%protocolwhisper%Documents%Working Dir%Denver2025%contracts%rayMath.vy
ethers/: .env  Cargo.toml
ethers/src/: main.rs
