[package]
name = "dream_finance_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"
tokio = { version = "1.28", features = ["full"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"